--- a/totalhr.web/Views/Shared/_BlankLayout.cshtml
+++ b/totalhr.web/Views/Shared/_BlankLayout.cshtml
@@ -28,7 +28,8 @@ Website: http://thevectorlab.net/
   <div class="login-header">
       <!-- BEGIN LOGO -->
       <div id="logo" class="center">
-          <img src="/Content/img/logo.png" alt="logo" class="center" />
+          <h2>TotalHR</h2>
+          @*<img src="/Content/img/logo.png" alt="logo" class="center" />*@
       </div>
       <!-- END LOGO -->
   </div>
