--- a/totalhr.web/Views/Shared/_DefaultLayout.cshtml
+++ b/totalhr.web/Views/Shared/_DefaultLayout.cshtml
@@ -46,8 +46,8 @@
                     <ul class="top-menu">
                         <li><a href="#">Tour</a></li>
                         <li><a href="#">Contact</a></li>
-						<li><a href="/Account/Register/">Sign Up</a></li>
-						<li><a href="/Account/Login/">Sign In</a></li>
+						<li><a href="/Account/Register/">Enregistrement</a></li>
+						<li><a href="/Account/Login/">Connexion</a></li>
                     </ul>
                 </div>
                 <!-- This column is hidden on mobiles -->
@@ -73,7 +73,7 @@
                 <div class="row">
                     <div class="col-sm-12 col-md-2">
                         <!-- Logo - Read documentation to see how to change the logo-->
-                        <a href="/" class="logo">TotalHR</a>
+                        <h2>TotalHR</h2>
                     </div>
                     <div class="col-sm-12 col-md-10">
                         <nav class="navbar-right">
@@ -82,7 +82,7 @@
                                 <li class="toggle-menu"><i class="fa icon_menu"></i></li> 
 									
                                 <li class="first">
-                                    <a href="#">Home</a>
+                                    <a href="#">Acceuil</a>
                                 </li> <!-- END Home -->
                                 <li>
                                     <a href="#">Features</a>
@@ -99,11 +99,11 @@
                                 </li> <!-- END Features -->
 
                                 <li>
-                                    <a href="#">Pricing</a>										
+                                    <a href="#">Prix</a>										
                                 </li>
 
                                 <li>
-									<a href="#">About Us</a>										
+									<a href="#">Notre Compagnie</a>										
 								</li>
                                 <li>
                                     <a href="#">Blog</a>
@@ -146,7 +146,7 @@
 					<div class="footer-widget">
 						<h3 class="footer-title">TotalHR</h3>
 						<ul class="footer-links clearfix">
-							<li><a href="#">Home</a></li>
+							<li><a href="#">Acceuil</a></li>
 							<li><a href="#">Contact</a></li>
 							<li><a href="#">Privacy Policy</a></li>
 							<li><a href="#">Services</a></li>
