--- a/totalhr.web/Views/Shared/_PartialHeader.cshtml
+++ b/totalhr.web/Views/Shared/_PartialHeader.cshtml
@@ -54,6 +54,7 @@
                            </a>
                        </li>
                        <!-- END SUPPORT -->
+                        @Html.Partial("_LanguagesOptions")
                        <!-- BEGIN USER LOGIN DROPDOWN -->
                        @Html.Partial("_MyProfilePreview")
                        <!-- END USER LOGIN DROPDOWN -->
